<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/invite_friend_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/fake_status_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/statusbar_view_height"
            android:background="@color/transparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/transparent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:padding="10dp"
                android:src="@mipmap/white_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/invite_friend_txt"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_act_rule"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_gravity="right"
            android:background="@drawable/act_rule_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="活动规则"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="326dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/invite_friend_code_bg"
                android:gravity="top|center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="318dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="33dp"
                    android:background="@mipmap/invite_code_bg"
                    android:gravity="center"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/your_invite_code_txt"
                        android:textColor="@color/common_gray"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_invite_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:gravity="center"
                        android:text="298374"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:src="@mipmap/vertical_line" />

                    <TextView
                        android:id="@+id/tv_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:gravity="center"
                        android:text="@string/copy_txt"
                        android:textColor="@color/privacy_text_color"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="330dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="18dp"
                    android:background="@mipmap/invite_rule_bg"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reg_step1"
                        android:textColor="@color/common_title_color"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:src="@mipmap/reg_step_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reg_step2"
                        android:textColor="@color/common_title_color"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:src="@mipmap/reg_step_icon" />

                    <TextView
                        android:id="@+id/tv_gold_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/reg_step3"
                        android:textColor="@color/common_title_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/wx_invite"
                    android:layout_width="300dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="24dp"
                    android:paddingBottom="6dp"
                    android:src="@drawable/wx_invite" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_wx_qun"
                        android:textColor="@color/black1"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_tishen"
                        android:textColor="@color/privacy_text_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>
