<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:scaleType="fitXY"
            android:src="@mipmap/my_info_top_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/fake_status_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/statusbar_view_height"
                android:background="@color/transparent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparent">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="6dp"
                    android:padding="10dp"
                    android:src="@mipmap/white_back" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="@string/my_wallet_txt"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <LinearLayout
                    android:id="@+id/layout_act_rule"
                    android:layout_width="90dp"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/my_receive_gold_bg"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="提现记录"
                        android:textColor="@color/white"
                        android:textSize="13sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/common_white_bg"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/layout_yue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="金币余额"
                            android:textColor="@color/common_gray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_gold_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/black1"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="53dp"
                        android:layout_height="17dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="12dp"
                        android:layout_toRightOf="@+id/layout_yue"
                        android:background="@mipmap/money_bg"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/tv_money"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="约0.00元"
                            android:textColor="@color/white"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_cash_money"
                        android:layout_width="66dp"
                        android:layout_height="29dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="12dp"
                        android:background="@mipmap/wallet_cash_btn"
                        android:text="提现"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="今日金币"
                            android:textColor="@color/common_gray"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_today_gold_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="累计收益(截止昨日)"
                            android:textColor="@color/common_gray"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_total_gold_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/line_ver"></View>

                <TextView
                    android:id="@+id/tv_exchange_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/exchange_txt"
                    android:textColor="@color/common_gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gold_day_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginBottom="12dp"
                android:background="@color/bg_color"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.3"
                    android:text="@string/no_gold_list_txt"
                    android:textColor="@color/common_title_color"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</androidx.core.widget.NestedScrollView>